--- a/src/index.css
+++ b/src/index.css
@@ -3,15 +3,15 @@
 }
 
 .todoapp input::-webkit-input-placeholder {
-	color: #e6e6e6;
+  color: #e6e6e6;
 }
 
 .todoapp input::-moz-placeholder {
-	color: #e6e6e6;
+  color: #e6e6e6;
 }
 
 .todoapp input::input-placeholder {
-	color: #e6e6e6;
+  color: #e6e6e6;
 }
 
 .todo-list li.completed label {
@@ -23,7 +23,7 @@
 }
 
 .todo-list li .toggle + label {
-  background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23ededed%22%20stroke-width%3D%223%22/%3E%3C/svg%3E');
+  background-image: url("data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23ededed%22%20stroke-width%3D%223%22/%3E%3C/svg%3E");
 }
 
 .info {
